[gd_scene load_steps=46 format=2]

[ext_resource path="res://scripts/boss.gd" type="Script" id=1]
[ext_resource path="res://graphic/BossHealthBarBorder.png" type="Texture" id=2]
[ext_resource path="res://graphic/BossHealthBar.png" type="Texture" id=3]
[ext_resource path="res://graphic/Boss.png" type="Texture" id=4]
[ext_resource path="res://graphic/BossLazer-Sheet.png" type="Texture" id=5]
[ext_resource path="res://Audio/LaserShoot (2).wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/Blaster1.wav" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 71.9436
height = 73.9277

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 480, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 720, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 960, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1200, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1440, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1680, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1920, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2160, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2400, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2640, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2880, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 3120, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 3360, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 3600, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 3840, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 4080, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 4320, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 4560, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 4800, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 5040, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 5280, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 5520, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 5760, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 6000, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 6240, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 6480, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 6720, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 6960, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 7200, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 7440, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 7680, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 7920, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 8160, 0, 240, 160 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 240, 160 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "Laser",
"speed": 6.0
}, {
"frames": [ SubResource( 37 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[node name="Boss" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.57221
shape = SubResource( 1 )

[node name="healthBar" type="TextureProgress" parent="."]
margin_left = -120.0
margin_top = 64.0
margin_right = 120.0
margin_bottom = 144.0
max_value = 1000.0
texture_progress = ExtResource( 3 )

[node name="healthBarBorder" type="TextureRect" parent="."]
margin_left = -128.0
margin_top = 64.0
margin_right = 122.0
margin_bottom = 144.0
texture = ExtResource( 2 )

[node name="Position1" type="Position2D" parent="."]
position = Vector2( 40, 65 )

[node name="Position2" type="Position2D" parent="."]
position = Vector2( -40, 65 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="LaserSpawn1" type="Position2D" parent="."]
position = Vector2( -105, 95 )

[node name="LaserSpawn2" type="Position2D" parent="."]
position = Vector2( 100, 95 )

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 38 )
playing = true

[node name="LaserAnim" type="Timer" parent="."]
wait_time = 8.0

[node name="BlasterSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 8.0

[node name="LaserSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 7.0

[connection signal="body_entered" from="." to="." method="_on_Boss_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_LaserTimer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="LaserAnim" to="." method="_on_LaserAnim_timeout"]
